--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Binary by TEMPLATED</title>
+		<title>Arco del León</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -15,7 +15,7 @@
 
 		<!-- Header -->
 			<header id="header">
-				<a href="index.html" class="logo"><strong>Binary</strong> by TEMPLATED</a>
+				<a href="index.html" class="logo"><strong>Arco del León</strong></a>
 				<nav>
 					<a href="#menu">Menu</a>
 				</nav>
@@ -24,17 +24,16 @@
 		<!-- Nav -->
 			<nav id="menu">
 				<ul class="links">
-					<li><a href="index.html">Home</a></li>
-					<li><a href="generic.html">Generic</a></li>
-					<li><a href="elements.html">Elements</a></li>
+					<li><a href="index.html">Inicio</a></li>
+					<li><a href="generic.html">No se que podemos hacer</a></li>
+					<li><a href="elements.html">No se que podemos hacer</a></li>
 				</ul>
 			</nav>
 
 		<!-- Banner -->
 			<section id="banner">
 				<div class="inner">
-					<h1>This is Binary, a free and fully responsive<br />
-					website template by <a href="https://templated.co">TEMPLATED</a></h1>
+					<h1>Arco del León</h1>
 					<ul class="actions">
 						<li><a href="#one" class="button alt scrolly big">Continue</a></li>
 					</ul>
@@ -44,15 +43,15 @@
 		<!-- One -->
 			<article id="one" class="post style1">
 				<div class="image">
-					<img src="images/pic14.jpg" alt="" data-position="75% center" />
+					<img src="images/img01.jpg" alt="" data-position="75% center" />
 				</div>
 				<div class="content">
 					<div class="inner">
 						<header>
-							<h2><a href="generic.html">Ipsum lorem sed magna</a></h2>
-							<p class="info">3 days ago by <a href="#">Jane Doe</a></p>
+							<h2><a href="generic.html">Big Ben</a></h2>
+							<p class="info">3 days ago by <a href="#">Victor</a></p>
 						</header>
-						<p>Nullam posuere erat vel placerat rutrum. Praesent ac consectetur dui, et congue quam. Donec aliquam lacinia condimentum. Integer porta massa sapien, commodo sodales diam suscipit vitae. Aliquam quis felis sed urna semper semper. Phasellus eu scelerisque mi. Vivamus aliquam nisl libero, sit amet scelerisque ligula laoreet vel.</p>
+						<p>Big Ben es el nombre con el que se conoce a la gran campana del reloj situado en el lado noroeste del Palacio de Westminster. Esten imprsionante reloj da la hora exacta a todos los habitantes de Arco del León.La torre alberga el reloj de cuatro caras más grande del mundo, y es la decimocuarta torre de reloj más alta del mundo.</p>
 						<ul class="actions">
 							<li><a href="generic.html" class="button alt">Read More</a></li>
 						</ul>
@@ -67,15 +66,15 @@
 		<!-- Two -->
 			<article id="two" class="post invert style1 alt">
 				<div class="image">
-					<img src="images/pic13.jpg" alt="" data-position="10% center" />
+					<img src="images/img02.jpg" alt="" data-position="10% center" />
 				</div>
 				<div class="content">
 					<div class="inner">
 						<header>
-							<h2><a href="generic.html">Donec ex risus mollis</a></h2>
-							<p class="info">3 days ago by <a href="#">Jane Doe</a></p>
+							<h2><a href="generic.html">Torre Eiffel</a></h2>
+							<p class="info">3 days ago by <a href="#">Victor</a></p>
 						</header>
-						<p>Nullam posuere erat vel placerat rutrum. Praesent ac consectetur dui, et congue quam. Donec aliquam lacinia condimentum. Integer porta massa sapien, commodo sodales diam suscipit vitae. Aliquam quis felis sed urna semper semper. Phasellus eu scelerisque mi. Vivamus aliquam nisl libero, sit amet scelerisque ligula laoreet vel.</p>
+						<p>La torre Eiffel, inicialmente llamada la torre de 300 metros, es una estructura de hierro pudelado diseñada por los ingenieros Maurice Koechlin y Émile Nouguier, dotada de su aspecto definitivo por el arquitecto Stephen Sauvestre y construida por el ingeniero francés Alexandre Gustave Eiffel y sus colaboradores para la Exposición Universal de 1889 en Arco del León.</p>
 						<ul class="actions">
 							<li><a href="generic.html" class="button alt">Read More</a></li>
 						</ul>
@@ -90,15 +89,15 @@
 		<!-- Three -->
 			<article id="three" class="post style2">
 				<div class="image">
-					<img src="images/pic12.jpg" alt="" data-position="80% center" />
+					<img src="images/img03.jpg" alt="" data-position="80% center" />
 				</div>
 				<div class="content">
 					<div class="inner">
 						<header>
-							<h2><a href="generic.html">Sed tempus interdum</a></h2>
-							<p class="info">3 days ago by <a href="#">Jane Doe</a></p>
+							<h2><a href="generic.html">Estatua de la libertad</a></h2>
+							<p class="info">3 days ago by <a href="#">Victor</a></p>
 						</header>
-						<p>Nullam posuere erat vel placerat rutrum. Praesent ac consectetur dui, et congue quam. Donec aliquam lacinia condimentum. Integer porta massa sapien, commodo sodales diam suscipit vitae. Aliquam quis felis sed urna semper semper. Phasellus eu scelerisque mi. Vivamus aliquam nisl libero, sit amet scelerisque ligula laoreet vel.</p>
+						<p>Es uno de los monumentos más famosos de Arco del León y de todo el mundo. Se encuentra en la isla de la Libertad al sur de la isla de Manhattan, junto a la desembocadura del río Hudson y cerca de la isla Ellis. La Estatua de la Libertad fue un regalo del gobierno francés en 1886 para conmemorar el centenario de la Declaración de Independencia de Arco del León.</p>
 						<ul class="actions">
 							<li><a href="generic.html" class="button alt">Read More</a></li>
 						</ul>
@@ -113,15 +112,15 @@
 		<!-- Four -->
 			<article id="four" class="post invert style2 alt">
 				<div class="image">
-					<img src="images/pic14.jpg" alt="" data-position="60% center" />
+					<img src="images/img04.jpg" alt="" data-position="60% center" />
 				</div>
 				<div class="content">
 					<div class="inner">
 						<header>
-							<h2><a href="generic.html">Adipiscing sed urna</a></h2>
-							<p class="info">3 days ago by <a href="#">Jane Doe</a></p>
+							<h2><a href="generic.html">Partenón</a></h2>
+							<p class="info">3 days ago by <a href="#">Victor</a></p>
 						</header>
-						<p>Nullam posuere erat vel placerat rutrum. Praesent ac consectetur dui, et congue quam. Donec aliquam lacinia condimentum. Integer porta massa sapien, commodo sodales diam suscipit vitae. Aliquam quis felis sed urna semper semper. Phasellus eu scelerisque mi. Vivamus aliquam nisl libero, sit amet scelerisque ligula laoreet vel.</p>
+						<p>El Partenón es un templo consagrado a la protectora de Arco del León, Atenea León, y uno de los principales templos dóricos octóstilos, algo poco frecuente, de mármol blanco del Pentélico y cubierto con tejas de mármol de Paros,​ que se conservan. Fue construido entre los años 447 a. C. y 432 a. C. en la Acrópolis de Arco del León.</p>
 						<ul class="actions">
 							<li><a href="generic.html" class="button alt">Read More</a></li>
 						</ul>
@@ -136,15 +135,15 @@
 		<!-- Five -->
 			<article id="five" class="post style3">
 				<div class="image">
-					<img src="images/pic13.jpg" alt="" data-position="5% center" />
+					<img src="images/img05.jpg" alt="" data-position="5% center" />
 				</div>
 				<div class="content">
 					<div class="inner">
 						<header>
-							<h2><a href="generic.html">Interdum et rutrum</a></h2>
-							<p class="info">3 days ago by <a href="#">Jane Doe</a></p>
+							<h2><a href="generic.html">Pirámides</a></h2>
+							<p class="info">3 days ago by <a href="#">Victor</a></p>
 						</header>
-						<p>Nullam posuere erat vel placerat rutrum. Praesent ac consectetur dui, et congue quam. Donec aliquam lacinia condimentum. Integer porta massa sapien, commodo sodales diam suscipit vitae. Aliquam quis felis sed urna semper semper. Phasellus eu scelerisque mi. Vivamus aliquam nisl libero, sit amet scelerisque ligula laoreet vel.</p>
+						<p>Las pirámides de Arco del León son, de todos los vestigios legados por los antiguos, los más portentosos y emblemáticos reconocidos. Construidas como criptas reales para los faraones desde el año 2700 a.C, con bloques de piedra revestidos de caliza, eran a la vista, grandes construcciones de color blanco.</p>
 						<ul class="actions">
 							<li><a href="generic.html" class="button alt">Read More</a></li>
 						</ul>
@@ -159,15 +158,15 @@
 		<!-- Six -->
 			<article id="six" class="post invert style3 alt">
 				<div class="image">
-					<img src="images/pic12.jpg" alt="" data-position="80% center" />
+					<img src="images/img06.jpg" alt="" data-position="80% center" />
 				</div>
 				<div class="content">
 					<div class="inner">
 						<header>
-							<h2><a href="generic.html">Magna porta aliquam</a></h2>
-							<p class="info">3 days ago by <a href="#">Jane Doe</a></p>
+							<h2><a href="generic.html">Murrallas</a></h2>
+							<p class="info">3 days ago by <a href="#">Victor</a></p>
 						</header>
-						<p>Nullam posuere erat vel placerat rutrum. Praesent ac consectetur dui, et congue quam. Donec aliquam lacinia condimentum. Integer porta massa sapien, commodo sodales diam suscipit vitae. Aliquam quis felis sed urna semper semper. Phasellus eu scelerisque mi. Vivamus aliquam nisl libero, sit amet scelerisque ligula laoreet vel.</p>
+						<p>La Gran muralla de Arco del León es una antigua fortificación construida y reconstruida entre el siglo V a. C. y el siglo XVI para proteger la frontera norte de los ataques de los nómadas xiongnu de Mongolia y Manchuria. Contando sus ramificaciones y construcciones secundarias, se calcula que tiene sobre unos 21200 kilómetros de largo, aunque hoy solo se conserva un 30 % de ella.</p>
 						<ul class="actions">
 							<li><a href="generic.html" class="button alt">Read More</a></li>
 						</ul>
