--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
 			<nav id="menu">
 				<ul class="links">
 					<li><a href="index.html">Inicio</a></li>
-					<li><a href="generic.html">No se que podemos hacer</a></li>
-					<li><a href="elements.html">No se que podemos hacer</a></li>
+					<li><a href="info.html">Información</a></li>
+					<li><a href="elements.html">Submenu2</a></li>
 				</ul>
 			</nav>
 
@@ -35,7 +35,7 @@
 				<div class="inner">
 					<h1>Arco del León</h1>
 					<ul class="actions">
-						<li><a href="#one" class="button alt scrolly big">Continue</a></li>
+						<li><a href="info.html" class="button alt scrolly big">Más información</a></li>
 					</ul>
 				</div>
 			</section>
@@ -163,7 +163,7 @@
 				<div class="content">
 					<div class="inner">
 						<header>
-							<h2><a href="generic.html">Murrallas</a></h2>
+							<h2><a href="generic.html">Murallas</a></h2>
 							<p class="info">3 days ago by <a href="#">Victor</a></p>
 						</header>
 						<p>La Gran muralla de Arco del León es una antigua fortificación construida y reconstruida entre el siglo V a. C. y el siglo XVI para proteger la frontera norte de los ataques de los nómadas xiongnu de Mongolia y Manchuria. Contando sus ramificaciones y construcciones secundarias, se calcula que tiene sobre unos 21200 kilómetros de largo, aunque hoy solo se conserva un 30 % de ella.</p>
