--- a/index.html
+++ b/index.html
@@ -48,12 +48,12 @@
 				<div class="content">
 					<div class="inner">
 						<header>
-							<h2><a href="generic.html">Big Ben</a></h2>
+							<h2><a href="bigBen.html">Big Ben</a></h2>
 							<p class="info">3 days ago by <a href="#">Victor</a></p>
 						</header>
 						<p>Big Ben es el nombre con el que se conoce a la gran campana del reloj situado en el lado noroeste del Palacio de Westminster. Esten imprsionante reloj da la hora exacta a todos los habitantes de Arco del León.La torre alberga el reloj de cuatro caras más grande del mundo, y es la decimocuarta torre de reloj más alta del mundo.</p>
 						<ul class="actions">
-							<li><a href="generic.html" class="button alt">Read More</a></li>
+							<li><a href="bigBen.html" class="button alt">Read More</a></li>
 						</ul>
 					</div>
 					<div class="postnav">
@@ -71,12 +71,12 @@
 				<div class="content">
 					<div class="inner">
 						<header>
-							<h2><a href="generic.html">Torre Eiffel</a></h2>
+							<h2><a href="eiffel.html">Torre Eiffel</a></h2>
 							<p class="info">3 days ago by <a href="#">Victor</a></p>
 						</header>
 						<p>La torre Eiffel, inicialmente llamada la torre de 300 metros, es una estructura de hierro pudelado diseñada por los ingenieros Maurice Koechlin y Émile Nouguier, dotada de su aspecto definitivo por el arquitecto Stephen Sauvestre y construida por el ingeniero francés Alexandre Gustave Eiffel y sus colaboradores para la Exposición Universal de 1889 en Arco del León.</p>
 						<ul class="actions">
-							<li><a href="generic.html" class="button alt">Read More</a></li>
+							<li><a href="eiffel.html" class="button alt">Read More</a></li>
 						</ul>
 					</div>
 					<div class="postnav">
@@ -94,12 +94,12 @@
 				<div class="content">
 					<div class="inner">
 						<header>
-							<h2><a href="generic.html">Estatua de la libertad</a></h2>
+							<h2><a href="libertad.html">Estatua de la libertad</a></h2>
 							<p class="info">3 days ago by <a href="#">Victor</a></p>
 						</header>
 						<p>Es uno de los monumentos más famosos de Arco del León y de todo el mundo. Se encuentra en la isla de la Libertad al sur de la isla de Manhattan, junto a la desembocadura del río Hudson y cerca de la isla Ellis. La Estatua de la Libertad fue un regalo del gobierno francés en 1886 para conmemorar el centenario de la Declaración de Independencia de Arco del León.</p>
 						<ul class="actions">
-							<li><a href="generic.html" class="button alt">Read More</a></li>
+							<li><a href="libertad.html" class="button alt">Read More</a></li>
 						</ul>
 					</div>
 					<div class="postnav">
@@ -117,12 +117,12 @@
 				<div class="content">
 					<div class="inner">
 						<header>
-							<h2><a href="generic.html">Partenón</a></h2>
+							<h2><a href="partenon.html">Partenón</a></h2>
 							<p class="info">3 days ago by <a href="#">Victor</a></p>
 						</header>
 						<p>El Partenón es un templo consagrado a la protectora de Arco del León, Atenea León, y uno de los principales templos dóricos octóstilos, algo poco frecuente, de mármol blanco del Pentélico y cubierto con tejas de mármol de Paros,​ que se conservan. Fue construido entre los años 447 a. C. y 432 a. C. en la Acrópolis de Arco del León.</p>
 						<ul class="actions">
-							<li><a href="generic.html" class="button alt">Read More</a></li>
+							<li><a href="partenon.html" class="button alt">Read More</a></li>
 						</ul>
 					</div>
 					<div class="postnav">
@@ -140,12 +140,12 @@
 				<div class="content">
 					<div class="inner">
 						<header>
-							<h2><a href="generic.html">Pirámides</a></h2>
+							<h2><a href="piramides.html">Pirámides</a></h2>
 							<p class="info">3 days ago by <a href="#">Victor</a></p>
 						</header>
 						<p>Las pirámides de Arco del León son, de todos los vestigios legados por los antiguos, los más portentosos y emblemáticos reconocidos. Construidas como criptas reales para los faraones desde el año 2700 a.C, con bloques de piedra revestidos de caliza, eran a la vista, grandes construcciones de color blanco.</p>
 						<ul class="actions">
-							<li><a href="generic.html" class="button alt">Read More</a></li>
+							<li><a href="piramides.html" class="button alt">Read More</a></li>
 						</ul>
 					</div>
 					<div class="postnav">
@@ -168,7 +168,7 @@
 						</header>
 						<p>La Gran muralla de Arco del León es una antigua fortificación construida y reconstruida entre el siglo V a. C. y el siglo XVI para proteger la frontera norte de los ataques de los nómadas xiongnu de Mongolia y Manchuria. Contando sus ramificaciones y construcciones secundarias, se calcula que tiene sobre unos 21200 kilómetros de largo, aunque hoy solo se conserva un 30 % de ella.</p>
 						<ul class="actions">
-							<li><a href="generic.html" class="button alt">Read More</a></li>
+							<li><a href="murallas.html" class="button alt">Read More</a></li>
 						</ul>
 					</div>
 					<div class="postnav">
