--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 					<li><a href="libertad.html">Estatua de la Libertad</a></li>
 					<li><a href="partenon.html">Partenón</a></li>
 					<li><a href="piramides.html">Piramides de Quaggan</a></li>
-					<li><a href="murallas.html">Muralla de Páramos</a></li>
+					<li><a href="murallas.html">Murallas de Páramos</a></li>
 				</ul>
 			</nav>
 
@@ -168,7 +168,7 @@
 				<div class="content">
 					<div class="inner">
 						<header>
-							<h2><a href="generic.html">Murallas</a></h2>
+							<h2><a href="generic.html">Murallas de Páramos</a></h2>
 							<p class="info">3 days ago by <a href="#">Victor</a></p>
 						</header>
 						<p>La Gran muralla de Arco del León es una antigua fortificación construida y reconstruida entre el siglo V a. C. y el siglo XVI para proteger la frontera norte de los ataques de los nómadas xiongnu de Mongolia y Manchuria. Contando sus ramificaciones y construcciones secundarias, se calcula que tiene sobre unos 21200 kilómetros de largo, aunque hoy solo se conserva un 30 % de ella.</p>
