--- a/piramides.html
+++ b/piramides.html
@@ -20,9 +20,14 @@
 		<!-- Nav -->
 			<nav id="menu">
 				<ul class="links">
-					<li><a href="index.html">Home</a></li>
-					<li><a href="generic.html">Generic</a></li>
-					<li><a href="elements.html">Elements</a></li>
+					<li><a href="index.html">Inicio</a></li>
+					<li><a href="info.html">Información</a></li>
+					<li><a href="bigBen.html">Big Ben</a></li>
+					<li><a href="eiffel.html">Torre Eiffel</a></li>
+					<li><a href="libertad.html">Estatua de la Libertad</a></li>
+					<li><a href="partenon.html">Partenón</a></li>
+					<li><a href="piramides.html">Piramides de Quaggan</a></li>
+					<li><a href="murallas.html">Murallas de Páramos</a></li>
 				</ul>
 			</nav>
 
