--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 		<!-- Two -->
 			<article id="two" class="post invert style1 alt">
 				<div class="image">
-					<img src="images/img02.jpg" alt="" data-position="10% center" />
+					<img src="images/img02.jpg" alt="torre eiffel" data-position="10% center" />
 				</div>
 				<div class="content">
 					<div class="inner">
@@ -94,7 +94,7 @@
 		<!-- Three -->
 			<article id="three" class="post style2">
 				<div class="image">
-					<img src="images/img03.jpg" alt="" data-position="80% center" />
+					<img src="images/img03.jpg" alt="estatua de la libertad" data-position="80% center" />
 				</div>
 				<div class="content">
 					<div class="inner">
@@ -117,7 +117,7 @@
 		<!-- Four -->
 			<article id="four" class="post invert style2 alt">
 				<div class="image">
-					<img src="images/img04.jpg" alt="" data-position="60% center" />
+					<img src="images/img04.jpg" alt="partenón" data-position="60% center" />
 				</div>
 				<div class="content">
 					<div class="inner">
@@ -140,7 +140,7 @@
 		<!-- Five -->
 			<article id="five" class="post style3">
 				<div class="image">
-					<img src="images/img05.jpg" alt="" data-position="5% center" />
+					<img src="images/img05.jpg" alt="pirámides de keops" data-position="5% center" />
 				</div>
 				<div class="content">
 					<div class="inner">
@@ -163,7 +163,7 @@
 		<!-- Six -->
 			<article id="six" class="post invert style3 alt">
 				<div class="image">
-					<img src="images/img06.jpg" alt="" data-position="80% center" />
+					<img src="images/img06.jpg" alt="murallas de paramos" data-position="80% center" />
 				</div>
 				<div class="content">
 					<div class="inner">
