--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	templated.co @templatedco
 	Released for free under the Creative Commons Attribution 3.0 license (templated.co/license)
 -->
-<html>
+<html lang="es">
 	<head>
 		<title>Arco del León</title>
 		<meta charset="utf-8" />
@@ -61,10 +61,6 @@
 							<li><a href="bigBen.html" class="button alt">Leer mas</a></li>
 						</ul>
 					</div>
-					<div class="postnav">
-						<a href="#" class="prev disabled"><span class="icon fa-chevron-up"></span></a>
-						<a href="#two" class="scrolly next"><span class="icon fa-chevron-down"></span></a>
-					</div>
 				</div>
 			</article>
 
@@ -83,10 +79,6 @@
 						<ul class="actions">
 							<li><a href="eiffel.html" class="button alt">Leer mas</a></li>
 						</ul>
-					</div>
-					<div class="postnav">
-						<a href="#one" class="scrolly prev"><span class="icon fa-chevron-up"></span></a>
-						<a href="#three" class="scrolly next"><span class="icon fa-chevron-down"></span></a>
 					</div>
 				</div>
 			</article>
@@ -107,10 +99,6 @@
 							<li><a href="libertad.html" class="button alt">Leer mas</a></li>
 						</ul>
 					</div>
-					<div class="postnav">
-						<a href="#two" class="scrolly prev"><span class="icon fa-chevron-up"></span></a>
-						<a href="#four" class="scrolly next"><span class="icon fa-chevron-down"></span></a>
-					</div>
 				</div>
 			</article>
 
@@ -129,10 +117,6 @@
 						<ul class="actions">
 							<li><a href="partenon.html" class="button alt">Leer mas</a></li>
 						</ul>
-					</div>
-					<div class="postnav">
-						<a href="#three" class="scrolly prev"><span class="icon fa-chevron-up"></span></a>
-						<a href="#five" class="scrolly next"><span class="icon fa-chevron-down"></span></a>
 					</div>
 				</div>
 			</article>
@@ -153,10 +137,6 @@
 							<li><a href="piramides.html" class="button alt">Leer mas</a></li>
 						</ul>
 					</div>
-					<div class="postnav">
-						<a href="#four" class="scrolly prev"><span class="icon fa-chevron-up"></span></a>
-						<a href="#six" class="scrolly next"><span class="icon fa-chevron-down"></span></a>
-					</div>
 				</div>
 			</article>
 
@@ -175,10 +155,6 @@
 						<ul class="actions">
 							<li><a href="murallas.html" class="button alt">Leer mas</a></li>
 						</ul>
-					</div>
-					<div class="postnav">
-						<a href="#five" class="scrolly prev"><span class="icon fa-chevron-up"></span></a>
-						<a href="#" class="scrolly next disabled"><span class="icon fa-chevron-down"></span></a>
 					</div>
 				</div>
 			</article>
