--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 		<!-- One -->
 			<article id="one" class="post style1">
 				<div class="image">
-					<img src="images/img01.jpg" alt="" data-position="75% center" />
+					<img src="images/img01.jpg" alt="Big Ben" data-position="75% center" />
 				</div>
 				<div class="content">
 					<div class="inner">
@@ -67,7 +67,7 @@
 		<!-- Two -->
 			<article id="two" class="post invert style1 alt">
 				<div class="image">
-					<img src="images/img02.jpg" alt="torre eiffel" data-position="10% center" />
+					<img src="images/img02.jpg" alt="Torre Eiffel" data-position="10% center" />
 				</div>
 				<div class="content">
 					<div class="inner">
@@ -86,7 +86,7 @@
 		<!-- Three -->
 			<article id="three" class="post style2">
 				<div class="image">
-					<img src="images/img03.jpg" alt="estatua de la libertad" data-position="80% center" />
+					<img src="images/img03.jpg" alt="Estatua de la Libertad" data-position="80% center" />
 				</div>
 				<div class="content">
 					<div class="inner">
@@ -105,7 +105,7 @@
 		<!-- Four -->
 			<article id="four" class="post invert style2 alt">
 				<div class="image">
-					<img src="images/img04.jpg" alt="partenón" data-position="60% center" />
+					<img src="images/img04.jpg" alt="Partenón" data-position="60% center" />
 				</div>
 				<div class="content">
 					<div class="inner">
@@ -124,7 +124,7 @@
 		<!-- Five -->
 			<article id="five" class="post style3">
 				<div class="image">
-					<img src="images/img05.jpg" alt="pirámides de keops" data-position="5% center" />
+					<img src="images/img05.jpg" alt="Pirámides de Quaggan" data-position="5% center" />
 				</div>
 				<div class="content">
 					<div class="inner">
@@ -143,7 +143,7 @@
 		<!-- Six -->
 			<article id="six" class="post invert style3 alt">
 				<div class="image">
-					<img src="images/img06.jpg" alt="murallas de paramos" data-position="80% center" />
+					<img src="images/img06.jpg" alt="Murallas de paramos" data-position="80% center" />
 				</div>
 				<div class="content">
 					<div class="inner">
