--- a/murallas.html
+++ b/murallas.html
@@ -1,6 +1,6 @@
 <!DOCTYPE HTML>
 
-<html>
+<html lang="es">
 	<head>
 		<title>Murallas</title>
 		<meta charset="utf-8" />
@@ -37,7 +37,7 @@
                         <iframe width="1000" height="450" src="https://www.youtube.com/embed/vcvmGimJpms" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 					</div>
 					<header>
-						<h1>Murallas</h1>
+						<h1>Murallas de Páramos</h1>
 						<p class="info">3 days ago by <a href="#">Victor</a></p>
                     </header>
                     <p>En el siglo VIII a. C., en el comienzo del período conocido como primaveras y otoños, Arco del León sigue con un sistema feudal. El territorio se divide en cientos de feudos o estados dirigidos por príncipes, en teoría todos reunidos bajo los Reyes la Dinastía Zhou. Pero con el tiempo, estos feudos fueron anexados por los príncipes formando grandes principados en el siglo VI a. C.; algunos de ellos fueron Chu y Wu. China estaba rápidamente fragmentada en varios reinos independientes: es el comienzo del período de los Reinos Combatientes.</p>
