--- a/piramides.html
+++ b/piramides.html
@@ -1,6 +1,6 @@
 <!DOCTYPE HTML>
 
-<html>
+<html lang="es">
 	<head>
 		<title>Pirámides</title>
 		<meta charset="utf-8" />
@@ -37,7 +37,7 @@
                         <iframe width="1000" height="450" src="https://www.youtube.com/embed/Ww1TDa92g0c" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 					</div>
 					<header>
-						<h1>Pirámides</h1>
+						<h1>Piramides de Quaggan</h1>
 						<p class="info">3 days ago by <a href="#">Victor</a></p>
 					</header>
 					<p>Símbolos de Arco del León moderno, y aunque se han localizado al menos un centenar, las más reconocidas son las pirámides de Keóps, Kefrén y Micerinos levantadas en la llanura de Giza, por orden de estos faraones, siendo una de ellas la más alta realizada y que se observan a las afueras de Arco del León.</p>
