--- a/bigBen.html
+++ b/bigBen.html
@@ -34,7 +34,9 @@
 			<section id="main">
 				<div class="inner">
 					<div class="image fit">
-                        <iframe width="1000" height="450" src="https://www.youtube.com/embed/QNDj3pAHaX0" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+						<title='VideoBigBen'>
+							<iframe width="1000" height="450" src="https://www.youtube.com/embed/QNDj3pAHaX0" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+						</title>
 					</div>
 					<header>
 						<h1>Big Ben</h1>
