title error solve

--- a/libertad.html
+++ b/libertad.html
@@ -34,7 +34,7 @@
 			<section id="main">
 				<div class="inner">
 					<div class="image fit">
-                        <iframe width="1050" height="450" src="https://www.youtube.com/embed/Pt6i_UAGDIc" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                        <iframe title="Video de la estatua de la libertad" width="1050" height="450" src="https://www.youtube.com/embed/Pt6i_UAGDIc" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 					</div>
 					<header>
 						<h1>Estatua de la Libertad</h1>
