--- a/bigBen.html
+++ b/bigBen.html
@@ -34,9 +34,7 @@
 			<section id="main">
 				<div class="inner">
 					<div class="image fit">
-						<title='VideoBigBen'>
-							<iframe width="1000" height="450" src="https://www.youtube.com/embed/QNDj3pAHaX0" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-						</title>
+							<iframe title="Video del Big Ben" width="1000" height="450" src="https://www.youtube.com/embed/QNDj3pAHaX0" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 					</div>
 					<header>
 						<h1>Big Ben</h1>
