--- a/partenon.html
+++ b/partenon.html
@@ -34,7 +34,7 @@
 			<section id="main">
 				<div class="inner">
 					<div class="image fit">
-                        <iframe width="1000" height="450" src="https://www.youtube.com/embed/YIFlrvInGoc" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                        <iframe title="Video del Partenon" width="1000" height="450" src="https://www.youtube.com/embed/YIFlrvInGoc" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 					</div>
 					<header>
 						<h1>Partenón</h1>
