--- a/piramides.html
+++ b/piramides.html
@@ -34,7 +34,7 @@
 			<section id="main">
 				<div class="inner">
 					<div class="image fit">
-                        <iframe width="1000" height="450" src="https://www.youtube.com/embed/Ww1TDa92g0c" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                        <iframe title="Video de las pirámides" width="1000" height="450" src="https://www.youtube.com/embed/Ww1TDa92g0c" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 					</div>
 					<header>
 						<h1>Piramides de Quaggan</h1>
