Updated html estructure

--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <!DOCTYPE HTML>
+
 	<head>
 		<title lang="es">Arco del León</title>
 		<meta name="viewport" content="width=device-width, initial-scale=1"/>
@@ -45,7 +46,7 @@
 		<!-- One -->
 			<article id="one" class="post style1">
 				<div class="image">
-					<img src="images/img01.jpg" alt="Big Ben" data-position="75% center" />
+					<img src="images/bigBen.jpg" alt="Big Ben" data-position="75% center" />
 				</div>
 				<div class="content">
 					<div class="inner">
@@ -61,7 +62,7 @@
 		<!-- Two -->
 			<article id="two" class="post invert style1 alt">
 				<div class="image">
-					<img src="images/img02.jpg" alt="Torre Eiffel" data-position="10% center" />
+					<img src="images/eiffel.jpg" alt="Torre Eiffel" data-position="10% center" />
 				</div>
 				<div class="content">
 					<div class="inner">
@@ -77,7 +78,7 @@
 		<!-- Three -->
 			<article id="three" class="post style2">
 				<div class="image">
-					<img src="images/img03.jpg" alt="Estatua de la Libertad" data-position="80% center" />
+					<img src="images/libertad.jpg" alt="Estatua de la Libertad" data-position="80% center" />
 				</div>
 				<div class="content">
 					<div class="inner">
@@ -93,7 +94,7 @@
 		<!-- Four -->
 			<article id="four" class="post invert style2 alt">
 				<div class="image">
-					<img src="images/img04.jpg" alt="Partenón" data-position="60% center" />
+					<img src="images/partenon.jpg" alt="Partenón" data-position="60% center" />
 				</div>
 				<div class="content">
 					<div class="inner">
@@ -109,12 +110,12 @@
 		<!-- Five -->
 			<article id="five" class="post style3">
 				<div class="image">
-					<img src="images/img05.jpg" alt="Pirámides de Quaggan" data-position="5% center" />
+					<img src="images/piramides.jpg" alt="Pirámides de Quaggan" data-position="5% center" />
 				</div>
 				<div class="content">
 					<div class="inner">
 						<header>
-							<h2><a href="piramides.html">Pirámides</a></h2>
+							<h2><a href="piramides.html">Pirámides de Quaggan</a></h2>
 							<p class="info">5 days ago by <a href="#">Victor</a></p>
 						</header>
 						<p>Las pirámides de Arco del León son, de todos los vestigios legados por los antiguos, los más portentosos y emblemáticos reconocidos. Construidas como criptas reales para los faraones desde el año 2700 a.C, con bloques de piedra revestidos de caliza, eran a la vista, grandes construcciones de color blanco.</p>
@@ -125,18 +126,15 @@
 		<!-- Six -->
 			<article id="six" class="post invert style3 alt">
 				<div class="image">
-					<img src="images/img06.jpg" alt="Murallas de paramos" data-position="80% center" />
+					<img src="images/murallas.jpg" alt="Murallas de paramos" data-position="80% center" />
 				</div>
 				<div class="content">
 					<div class="inner">
 						<header>
-							<h2><a href="generic.html">Murallas de Páramos</a></h2>
+							<h2><a href="murallas.html">Murallas de Páramos</a></h2>
 							<p class="info">6 days ago by <a href="#">Victor</a></p>
 						</header>
 						<p>La Gran muralla de Arco del León es una antigua fortificación construida y reconstruida entre el siglo V a. C. y el siglo XVI para proteger la frontera norte de los ataques de los nómadas xiongnu de Mongolia y Manchuria. Contando sus ramificaciones y construcciones secundarias, se calcula que tiene sobre unos 21200 kilómetros de largo, aunque hoy solo se conserva un 30 % de ella.</p>
-						<ul class="actions">
-							<li><a href="murallas.html" class="button alt">Leer mas</a></li>
-						</ul>
 					</div>
 				</div>
 			</article>
@@ -149,7 +147,7 @@
 					<li><a href="https://www.instagram.com/guildwars2/" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
 				</ul>
 				<div class="copyright">
-					&copy; Untitled. Design: <a href="https://templated.co">TEMPLATED</a>. Images: <a href="https://unsplash.com">Unsplash</a>.
+					&copy; URJC. GIS. ETSII</a>.
 				</div>
 			</footer>
 
