--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE HTML>
-
+<html lang="es">
 	<head>
 		<title lang="es">Arco del León | Lo mejor de lo mejor</title>
 		<meta name="viewport" content="width=device-width, initial-scale=1"/>
