Added Accesibility Tag

--- a/info.html
+++ b/info.html
@@ -52,14 +52,14 @@
 
 		<!-- Footer -->
 			<footer id="footer">
+				<a href="http://www.w3.org/WAI/WCAG1AA-Conformance" title="Explicación del Nivel Doble-A de Conformidad">
+					<img height="32" width="88" src="http://www.w3.org/WAI/wcag1AA"
+					alt="Icono de conformidad con el Nivel Doble-A, de las Directrices de Accesibilidad para el Contenido Web 1.0 del W3C-WAI"></a>
 				<ul class="icons">
 					<li><a href="https://twitter.com/guildwars2?lang=es" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
 					<li><a href="https://es-es.facebook.com/GuildWars2/" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
 					<li><a href="https://www.instagram.com/guildwars2/" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
 				</ul>
-				<div class="copyright">
-					&copy; Untitled. Design: <a href="https://templated.co">TEMPLATED</a>. Images: <a href="https://unsplash.com">Unsplash</a>.
-				</div>
 			</footer>
 
 		<!-- Scripts -->
