--- a/eiffel.html
+++ b/eiffel.html
@@ -48,6 +48,9 @@
 
 		<!-- Footer -->
 			<footer id="footer">
+				<a href="http://www.w3.org/WAI/WCAG1AA-Conformance" title="Explicación del Nivel Doble-A de Conformidad">
+					<img height="32" width="88" src="http://www.w3.org/WAI/wcag1AA"
+					alt="Icono de conformidad con el Nivel Doble-A, de las Directrices de Accesibilidad para el Contenido Web 1.0 del W3C-WAI"></a>
 				<ul class="icons">
 					<li><a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
 					<li><a href="#" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
