--- a/bigBen.html
+++ b/bigBen.html
@@ -33,7 +33,7 @@
 		<!-- Main -->
 			<section id="main">
 				<div class="inner">
-					<div class="image fit">
+					<div class="video-container">
 							<iframe title="Video del Big Ben" width="1000" height="450" src="https://www.youtube.com/embed/QNDj3pAHaX0" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 					</div>
 					<header>
