--- a/libertad.html
+++ b/libertad.html
@@ -33,7 +33,7 @@
 		<!-- Main -->
 			<section id="main">
 				<div class="inner">
-					<div class="image fit">
+					<div class="video-container">
                         <iframe title="Video de la estatua de la libertad" width="1050" height="450" src="https://www.youtube.com/embed/Pt6i_UAGDIc" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 					</div>
 					<header>
