--- a/piramides.html
+++ b/piramides.html
@@ -33,7 +33,7 @@
 		<!-- Main -->
 			<section id="main">
 				<div class="inner">
-					<div class="image fit">
+					<div class="video-container">
                         <iframe title="Video de las pirámides" width="1000" height="450" src="https://www.youtube.com/embed/Ww1TDa92g0c" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 					</div>
 					<header>
